--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
           </div>
           <div class="form-group">
             <label for="age">Sua idade</label>
-            <input type="number" id="age" />
+            <input type="number" id="age" required/>
           </div>
           <div class="form-group">
             <label for="weight">Seu peso</label>
-            <input type="number" id="weight" />
+            <input type="number" id="weight" required/>
           </div>
           <div class="form-group">
             <label for="height">Sua altura</label>
-            <input type="number" id="height" />
+            <input type="number" id="height" required/>
           </div>
           <div class="form-group">
             <label for="activity_level">Seu nível de atividade física</label>
@@ -45,6 +45,7 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="activity_level">Qual o seu objetivo</label>
             <select id="training-objective">
               <option value="manter">Manter seu peso</option>
               <option value="ganhar">Ganhar Peso</option>
