--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>getkcal</title>
+    <title>routine</title>
     <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
 
   <body>
     <div class="container">
       <header>
-        <img src="assets/images/logo.svg" alt="getkcal" />
+        <img src="assets/images/logo.png" alt="getkcal" />
       </header>
 
       <div class="content">
